@@ -41,6 +41,7 @@ public:
 	
 	Type GetType() { return m_Type; }
 
+	// in indexed mode the topology vectors are filled with indices
 	const vector<vector<int> > &GetConnectedVerts() { GenerateTopology(); return m_ConnectedVerts; }
 	const vector<dVector> &GetGeometricNormals() { GenerateTopology(); return m_GeometricNormals; }
 	const vector<vector<pair<int,int> > > &GetUniqueEdges() { CalculateUniqueEdges(); return m_UniqueEdges; }
