@@ -14,6 +14,13 @@ Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 * added (clear-zbuffer)
 * added (pixels-load) for loading pngs into pixel prims
 * renamed (upload-pixels) to (pixels-upload)
+* added indexed mode polygon support
+	- (poly-set-index index-list) 
+	- (poly-convert-to-indexed)
+* stencil buffer shadows for poly primitives
+	- (shadow-light)
+	- (shadow-length)
+	- (shadow-debug)
 
 0.12
 
